Update package.json to match package name in npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "extname",
+    "name": "browser-extname",
     "version": "1.0.0",
     "description": "Node.js path.extname for browsers and web-workers",
     "main": "index.js",
